--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "barryvdh/laravel-ide-helper": "^2.8",
+        "doctrine/dbal": " ~2.3",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "gregwar/captcha": "^1.1",
